# PsycheCounselAI---LLM-Mental-Health-Chatbot

./: .gitignore  PsychoCounsilAi.ipynb  README.md  package-lock.json  package.json
client/: .env.example  index.html  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  App.jsx
client/src/auth/: LoginForm.js  RegistrationForm.js
client/src/components/: ChatInterface.js  ConfidenceSection.js  Footer.js  Header.js  HeroSection.js  Layout.js  LoginForm.js  Questionnaire.js  RegistrationForm.js  StressCheckSection.js  features.jsx  footer.jsx  herosection.jsx  mainfeatures.jsx  navbar.jsx  privacy.jsx  stresschecker.jsx  testimonial.jsx  working.jsx
client/src/css/: App.css  ChatInterface.css  ConfidenceSection.css  Footer.css  Header.css  HeroSection.css  LoginForm.css  (+4 more)
server/: .env.example  app.py  package-lock.json  package.json  pyproject.toml  server.js
server/config/: compass-connections.json  db.js
server/controller/: userControl.js
server/controllers/: authController.js  therapyController.js
server/helper/: key_generator.js
server/middleware/: auth.js  formDataMiddle.js  userMiddle.js
server/model/: user.js
server/models/: TherapySession.js  User.js
server/pkl/: stress_prediction_model.pkl
server/routes/: auth.js  therapy.js  userRout.js
src/: App.css  App.jsx  index.css
src/components/: footer.jsx  herosection.jsx  mainfeatures.jsx  navbar.jsx  privacy.jsx  stresschecker.jsx  testimonial.jsx  working.jsx
src/helper/: speak.js  voiceClone.js
src/pages/: chatapp.jsx  stressquestions.jsx  technology.jsx
(+10 files in other folders)
