[tool.poetry]
name = "server"
version = "0.1.0"
description = "this is python backend"
authors = ["Rupesh Jadhav <rj25031@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
